Fixes after comments on implementations