@@ -2,24 +2,20 @@ package se.mistral.backend.child;
 
 import org.springframework.stereotype.Service;
 
+import lombok.RequiredArgsConstructor;
 import se.mistral.backend.child.dto.ChildResponse;
 import se.mistral.backend.child.dto.CreateChildRequest;
 import java.util.List;
-import java.util.stream.Collectors;
 
-
+@RequiredArgsConstructor
 @Service
 public class ChildService {
 
     private final ChildRepository childRepository;
-
-    public ChildService(ChildRepository childRepository) {
-        this.childRepository = childRepository;
-    }
     
     public ChildResponse createChild(CreateChildRequest request) {
         Child child = new Child();
-        child.setName(request.getName());
+        child.setName(request.name());
         Child saved = childRepository.save(child);
         return new ChildResponse(saved.getId(), saved.getName());
     }
@@ -27,6 +23,6 @@ public class ChildService {
         public List<ChildResponse> getAllChildren() {
             return childRepository.findAll().stream()
                     .map(child -> new ChildResponse(child.getId(), child.getName()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 }
